# r2client

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: account.rs  bucket.rs  file.rs  mod.rs  transfer.rs
src-tauri/src/r2/: client.rs  types.rs
src-tauri/src/storage/: config.rs
src/components/bucket/: AddAccountDialog.tsx
src/components/file/: Breadcrumb.tsx  ContextMenu.tsx  DropZone.tsx  EmptyState.tsx  FileExplorer.tsx  FileGrid.tsx  FileList.tsx  FilePreview.tsx  FileToolbar.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx  StatusBar.tsx
src/components/transfer/: TransferQueue.tsx
src/components/ui/: ConfirmDialog.tsx  InputDialog.tsx  Skeleton.tsx  Toast.tsx
src/hooks/: useR2.ts  useToast.ts  useTransfer.ts
src/lib/: tauri.ts  utils.ts
src/stores/: bucketStore.ts  fileStore.ts  themeStore.ts  transferStore.ts
src/styles/: globals.css
